--- a/src/stylesheet/ChessClock.css
+++ b/src/stylesheet/ChessClock.css
@@ -1,5 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
+
 html {
   background-color: black;
+  font-family: "Roboto", sans-serif;
 }
 
 .game-container {
@@ -18,6 +21,7 @@ html {
   text-decoration: none;
   margin: 4px 2px;
   cursor: pointer;
+  border-radius: 10px;
 }
 
 .clock-time {
@@ -57,12 +61,13 @@ html {
 }
 
 .card-configuration {
+  display: flex;
+  flex-direction: column;
   background-color: white;
-
   border-radius: 10px;
   padding: 10px;
   color: black;
-  width: 50%;
+  width: 80%;
   margin: 0 auto;
 }
 
@@ -81,4 +86,12 @@ html {
 .disabled {
   background-color: grey;
   pointer-events: none;
+}
+
+.lost {
+  background-color: red;
+}
+
+.warning {
+  background-color: yellow;
 }
