--- a/src/stylesheet/ChessClock.css
+++ b/src/stylesheet/ChessClock.css
@@ -274,6 +274,26 @@ a {
   pointer-events: none;
 }
 
+.clock-less-time {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 50px;
+  height: 50px;
+  animation: move 0.5s infinite alternate;
+}
+.boton-player.disabled .clock-less-time {
+  display: none;
+}
+@keyframes move {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1.2);
+  }
+}
+
 .lost {
   background-color: red;
 }
