Arreglando error de toast

--- a/src/stylesheet/ChessClock.css
+++ b/src/stylesheet/ChessClock.css
@@ -287,6 +287,10 @@ input:checked + .slider:before {
   width: 90%;
 }
 
+.themeSelect > form {
+  width: 100%;
+}
+
 .matchs {
   display: flex;
   flex-direction: column;
